--- a/apps.json
+++ b/apps.json
@@ -3,7 +3,6 @@
   "identifier": "com.aki2273.altstore.ytplus",
   "subtitle": "Unofficial YouTube Plus source",
   "tintColor": "FF0000",
-
   "iconURL": "https://www.dropbox.com/scl/fi/eppar92cyvxqu6qnuk5l0/2018_social_media_popular_app_logo_youtube-512.webp?rlkey=kat2gxu7601z2vaevbg5pttdn&raw=1",
 
   "apps": [
@@ -15,12 +14,12 @@
 
       "version": "5.2-beta-1",
       "versionDate": "2025-07-06",
-
       "downloadURL": "https://github.com/aki2273/YTLite/releases/download/App/YouTubePlus_5.2b1.ipa",
+
+      "localizedDescription": "YouTube Plus brings background playback, ad-blocking and more to the official YouTube app.",
 
       "iconURL": "https://www.dropbox.com/scl/fi/eppar92cyvxqu6qnuk5l0/2018_social_media_popular_app_logo_youtube-512.webp?rlkey=kat2gxu7601z2vaevbg5pttdn&raw=1",
       "tintColor": "FF0000",
-
       "screenshotURLs": []
     }
   ]
