--- a/apps.json
+++ b/apps.json
@@ -11,7 +11,7 @@
       "bundleIdentifier": "com.google.ios.youtube",
       "developerName": "Various Developers",
       "subtitle": "An enhanced YT experience",
-      "version": "5.2b1",
+      "version": "20.26.7",
       "versionDate": "2025-07-06",
       "versionDescription": "Fixes and UI Improvements",
       "downloadURL": "https://github.com/aki2273/YTLite/releases/download/App/YouTubePlus_5.2b1.ipa",
